<resources>
    <string name="app_name">AlphabetSoup</string>
    <!-- Trads for register views -->
    <string name="correoEt">E-mail</string>
    <string name="nombreEt">Nom</string>
    <string name="passEt">Password</string>
    <string name="fechaTxt">Data</string>
    <string name="Registrar">REGISTRAR</string>
    <string name="BTMLOGIN">Login</string>
    <string name="BTMREGISTRO">Registro</string>
    <string name="correoLogin">E-mail</string>
    <string name="passLogin">Password</string>
    <string name="Btnlogin">Entrar</string>
    <string name="TancarSessio">Tancar Sessió</string>
    <string name="tancarSessio">Tancar Sessió</string>
    <string name="miPuntuaciotxt">Puntuació</string>
    <string name="puntuacio"> -- </string>
    <string name="uid"> -- </string>
    <string name="correo"> -- </string>
    <string name="nom"> -- </string>
    <string name="MenuTxt">MENÚ</string>
    <string name="jugarBtn">Jugar</string>
    <string name="PuntuacionsBtn">Puntuacions</string>
    <string name="CreditsBtn">Crèdits</string>
    <string name="Level1Indicator" translatable="false">Animals</string>
    <string name="Level2Indicator" translatable="false">Nivell 2</string>
    <string name="Level3Indicator" translatable="false">Nivell 3</string>
    <string name="popup_msg">Has perdut!</string>
    <string name="backtomenu">Tornar al menu</string>
    <string name="canviarContrasenya">Canviar Contrasenya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>