<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1B1B"
    android:layout_gravity="center"
    tools:context=".MenuActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">
        <!-- Text La meva puntuació -->
        <TextView
            android:id="@+id/miPuntuaciotxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/miPuntuaciotxt"
            android:textColor="#FF5252"
            android:textSize="30sp" />
        <!-- contingut puntuació -->
        <TextView
            android:id="@+id/puntuacio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/puntuacio"
            android:textColor="#F44336" />
        <!-- Imatge alien -->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:id="@+id/alienimagen"
            android:src="@drawable/fondo" />
        <!-- uid -->
        <TextView
            android:id="@+id/uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/uid"
            android:textColor="#FFFFFF" />
        <!-- correu -->
        <TextView
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/correo"
            android:textColor="#FFFFFF" />
        56
        <!-- nom -->
        <TextView
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nom"
            android:textColor="#FFFFFF" />
        <!-- BOTO DE jugar -->
        <Button
            android:id="@+id/jugarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jugarBtn"
            android:layout_marginTop="10dp"
            android:background="@drawable/botopropi"
            android:textColor="@color/black"
            />
        <!-- BOTO DE puntuacions -->
        <Button
            android:id="@+id/PuntuacionsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PuntuacionsBtn"
            android:layout_marginTop="10dp"
            android:background="@drawable/botopropi"
            android:textColor="@color/black"
            />
        <!-- BOTO DE Credits -->
        <Button
            android:id="@+id/CreditsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreditsBtn"
            android:layout_marginTop="10dp"
            android:background="@drawable/botopropi"
            android:textColor="@color/black"
            />
        <!-- BOTO DE Tancar sessió -->
        <Button
            android:id="@+id/tancarSessio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tancarSessio"
            android:layout_marginTop="10dp"
            android:background="@drawable/botopropi"
            android:textColor="@color/black"
            />
    </LinearLayout>
</ScrollView>