<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1B1B"
    tools:context=".Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">
        <!-- ENTREM EL MAIL -->
        <!-- forcem que la entrada sigui un correu electronic -->
        <!-- ENTREM EL PASSWORD -->
        <EditText
            android:id="@+id/correoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:hint="@string/correoEt"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:hint="@string/passEt"
            android:inputType="textPassword" />
        <!-- forcem que la entrada sigui un password -->
        <!-- ENTREM EL NOM DEL JUGADOR -->
        <EditText
            android:id="@+id/nombreEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:hint="@string/nombreEt" />
        <!-- DATA ACTUAL -->
        <TextView
            android:id="@+id/fechaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#4CAF50"
            android:gravity="center"
            android:hint="@string/fechaTxt"
            android:textSize="20sp" />
        <!-- BOTO DE ENTRAR -->
        <Button
            android:id="@+id/Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Registrar"
            android:layout_marginTop="10dp"
            android:background="@drawable/botopropi"
            android:textColor="@color/black"

            />
    </LinearLayout>
</RelativeLayout>