<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#58FA58"
    tools:context=".Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">
        <!-- ENTREM EL MAIL -->
        <EditText
            android:id="@+id/correoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/correoLogin" />
        <!-- forcem que la entrada sigui un correu electronic -->
        <!-- ENTREM EL PASSWORD -->
        <EditText
            android:id="@+id/passLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passLogin" />
        <!-- forcem que la entrada sigui un password -->
        <!-- BOTO DE ENTRAR -->
        <Button
            android:id="@+id/Btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btnlogin"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
</RelativeLayout>